--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Testing Github</h1>
-    <p>This is a simple HTML page.</p>
+    <p>This is a simple HTML page</p>
 </body>
 </html>
