--- a/index.html
+++ b/index.html
@@ -3,10 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MKS CODING:</title>
+    <title>HoYoVerse Universe</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+    <style>
+        body{
+            height: 1000vh;
+        }
+
+        nav{
+            background-color: #43a1ff;
+            color: black;
+        }
+
+        .nav-link{
+            color: rgb(0, 0, 0);
+            font-size: 20px;
+        }
+
+        .hero{
+            height: 60vh;
+            background-color: rgba(197, 234, 255, 1.0);
+            /* Tambahan kode untuk background image */
+            background-image: url('./hoyoversewebsite/background.jpg'); /* Ganti URL ini dengan lokasi gambarmu */
+            background-size: cover; /* Atur agar gambar menutupi seluruh area */
+            background-position: center; /* Posisikan gambar di tengah */
+            background-repeat: no-repeat; /* Hindari pengulangan gambar */
+            backdrop-filter: blur(1000vh); /* Efek blur pada latar belakang */
+        }
+
+        .btn {
+            border-radius: 20px;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Testing Github</h1>
-    <p>This is a simple HTML page</p>
+<nav class="navbar navbar-expand-lg fixed-top text-dark" data-bs-theme="dark">
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark container fixed-top" data-bs-theme="dark"> -->
+  <div class="container d-flex">  
+      <!-- bagian 1 logo  -->
+    <div class="d-flex">
+        <a href=""><img src="./hoyoversewebsite/HoYoverse-Logo.png" alt="" width="150"></a>
+    </div>
+
+    <!-- menampilkan menu via mobile / repsonsive -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="#menu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- bagian 2 menu list tengah -->
+    <div class="collapse navbar-collapse text-dark" id="menu">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <li class="nav-item me-5">
+          <a class="nav-link " aria-current="page" href="#" class="">🏠Home</a>
+        </li>
+        <li class="nav-item me-5">
+            <a href="#ourgames" class="nav-link">🎮Our Games</a>
+        </li>
+        <li class="nav-item me-5">
+            <a href="" class="nav-link">📞Contact Us</a>
+        </li>
+      </ul>
+      
+      <div class="d-flex" role="search">
+          <form class="d-flex" role="search">
+            <button class="btn btn-outline-success bg-success text-white" type="submit">🔒Login</button>
+          </form>
+      </div>
+    </div>
+    <!-- bagian 3 -->
+</nav>
+<div class="hero pt-5 mt-5 d-flex flex-column justify-content-center align-items-center flex-wrap">
+    <div class="container text-center">
+        <h1 class="mb-5">Welcome to Hoyoverse</h1>
+        <p class="m-2">"Dive into Epic Adventures, Crafted by Tech Otakus to Save the World."</p>
+        <button type="button" class="btn btn-primary mt-5 px-5">Play Here</button>
+    </div>
+</div>
+<h2 id="ourgames" class="container text-center mt-5">Enjoy Our Games</h2>
+<div class="container d-flex justify-content-center align-items-center my-5 gap-5">
+    <div>
+        <div class="card">
+            <img src="./hoyoversewebsite/Genshin_Impact.webp" class="card-img-top" alt="..." weight="200" height="200">
+            <div class="card-body">
+                <h5 class="card-title">Genshin Impact</h5>
+                <p class="card-text">Fantasy RPG: Explore the vast and mysterious world of Teyvat, and discover your destiny</p>
+                <a href="#" class="btn btn-primary">See More</a>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="card">
+            <img src="./hoyoversewebsite/Honkai_Star_Rail.webp" class="card-img-top" alt="..." weight="200" height="200">
+            <div class="card-body">
+                <h5 class="card-title">Honkai: Star Rail</h5>
+                <p class="card-text">Turn-Based Sci-Fi: Board the Star Rail to traverse endless galaxies, where every choice is your fate.</p>
+                <a href="#" class="btn btn-primary">See More</a>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="card">
+            <img src="./hoyoversewebsite/Zenless_Zone_Zero.jpg" class="card-img-top" alt="..." weight="200" height="200">
+            <div class="card-body">
+                <h5 class="card-title">Zenless Zone Zero</h5>
+                <p class="card-text">Urban Fantasy Action RPG: Join the adventure in New Eridu and face challenges in a ruined city.</p>
+                <a href="#" class="btn btn-primary">See More</a>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="card">
+            <img src="./hoyoversewebsite/Honkai_nexus_anima.jpeg" class="card-img-top" alt="..." weight="200" height="200">
+            <div class="card-body">
+                <h5 class="card-title">Honkai: Nexus Anima</h5>
+                <p class="card-text">Enjoy the world of companionship, deploy your companion into a battle of chess.</p>
+                <a href="#" class="btn btn-primary">See More</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+</div>
 </body>
+
+<footer class="bg-dark text-white text-center p-3">
+    <p>&copy; 2024 Hoyoverse. All rights reserved.</p>
+</footer>
 </html>
