--- a/index.html
+++ b/index.html
@@ -145,7 +145,59 @@
           </div>
         </div>
       </section>
-      
+
+      <section id="dokumentasi" class="py-5">
+        <div class="container">
+          <h2 class="text-center mb-5">DOKUMENTASI KEGIATAN</h2>
+          <div id="carouselKegiatan" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselKegiatan" data-bs-slide-to="7" aria-label="Slide 8"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/carousel1.webp" class="d-block" alt="Dokumentasi Kegiatan 1">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel2.webp" class="d-block" alt="Dokumentasi Kegiatan 2">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel3.webp" class="d-block" alt="Dokumentasi Kegiatan 3">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel4.webp" class="d-block" alt="Dokumentasi Kegiatan 4">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel5.webp" class="d-block" alt="Dokumentasi Kegiatan 5">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel6.webp" class="d-block" alt="Dokumentasi Kegiatan 6">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel7.webp" class="d-block" alt="Dokumentasi Kegiatan 7">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/carousel8.webp" class="d-block" alt="Dokumentasi Kegiatan 8">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselKegiatan" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselKegiatan" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+
     <footer id="kontak" class="py-4 text-center text-white">
         <div class="container">
             <div class="mb-3">
